--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+# Visual Studio
 .vs
+
+# Build output
+bin/
+obj/
+
+# User-specific files
+*.user
+*.suo
+
+# Temporary files
+*.tmp
+*.log
+
+# IDE junk
+.idea/
+.vscode/
