Basic landing page with buttons to test logic writing for navigation to untouched login and register page

--- a/frontend/Frontend.ui/Frontend.ui.csproj
+++ b/frontend/Frontend.ui/Frontend.ui.csproj
@@ -18,4 +18,10 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="GlobalUI\HeaderView.axaml.cs">
+      <DependentUpon>HeaderView.axaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
