--- a/frontend/Frontend.ui/Frontend.ui.csproj
+++ b/frontend/Frontend.ui/Frontend.ui.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
+	<PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -12,7 +12,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="11.3.12" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.12" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.12" />
-    <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
+	  <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Include="Avalonia.Diagnostics" Version="11.3.12">
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
@@ -22,6 +22,12 @@
   <ItemGroup>
     <Compile Update="GlobalUI\HeaderView.axaml.cs">
       <DependentUpon>HeaderView.axaml</DependentUpon>
-    </Compile>
+		</Compile>
   </ItemGroup>
+	<ItemGroup>
+		<Compile Update="PageView\LoginPageView.axaml.cs">
+			<DependentUpon>LoginPageView.axaml</DependentUpon>
+		</Compile>
+	</ItemGroup>
+
 </Project>
